add user interface logic

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           </form>
         </div>
       </div>
+      <div>
+        <p id="text-output"></p>
+      </div>
     </div>
   </body>
 </html>
